[tool.poetry]
name = "my-project"
version = "0.1.0"
description = "this is a sample description."
authors = ["me <me@example.com>"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://example.com"
repository = "https://github.com/example/example"
documentation = "https://example.com"
keywords = []
classifiers = []
urls = { example = "https://example.com" }
packages = [
    { include = "my-package" },
]
include = [
    { path = "example", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
isort = "^5.9.2"
mypy = "^0.910"

[tool.isort]
skip_gitignore = "True"
line_length = "120"
extra_standard_library = ["typing_extensions"]

[tool.mypy]
python-version = 3.9
exclude = "venv"
ignore_missing_imports = true
pretty = true
strict = true
plugins = ""


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
